added postgresql data storing
- dao_postgresql layer
- everything goes through restaurantManager layer

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.1</version>
+        </dependency>
     </dependencies>
 </project>
